--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main_page.css">
     <title>Foodclub</title>
 </head>
+
 <body>
     <header>
         <div class="header-container-fluid">
@@ -22,9 +24,16 @@
                     </div>
                     <div class="right-section">
                         <div class="social-links">
-                            <a href="https://www.youtube.com/@foodclub9375" target="_blank" title="YouTube">YouTube</a>
-                            <a href="https://www.instagram.com/foodclub_ru?igsh=MTQxM3Q4dzljdWFqag==" target="_blank" title="Instagram">Instagram</a>
-                            <a href="/search" title="Поиск">Поиск</a>
+                            <a href="https://www.youtube.com/@foodclub9375" target="_blank" title="YouTube">
+                                <img src="img/youtube.svg" alt="YouTube" class="b-header-panel__icon i-youtube hidden-xs hidden-sm">
+                            </a>
+                            <a href="https://www.instagram.com/foodclub_ru?igsh=MTQxM3Q4dzljdWFqag==" target="_blank" title="Instagram">
+                                <img src="img/instagram.svg" alt="Instagram" class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
+                            </a>
+                            <a href="https://www.foodclub.ru/search-m/" target="_blank" title="search">
+                                <img src="img/search.svg" alt="Search" class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
+                            </a>
+                            <a href="#" data-toggle="modal" data-target="#authModal" class="btn b-header-panel__login hidden-xs hidden-sm">Войти</a>
                         </div>
                     </div>
                 </nav>
@@ -38,13 +47,23 @@
         <section class="trends">
             <h2>Тренды</h2>
             <div class="trends-wrapper">
-                <a href="https://www.foodclub.ru/search/к%20чаю/" class="b-trends__item">К чаю</a>
-                <a href="https://www.foodclub.ru/search/Овощные%20пироги/" class="b-trends__item">Овощные пироги</a>
-                <a href="https://www.foodclub.ru/search/салат%20оливье/" class="b-trends__item">Оливье</a>
-                <a href="https://www.foodclub.ru/search/Постные%20рецепты/" class="b-trends__item active">Постные рецепты</a>
-                <a href="https://www.foodclub.ru/recipes/salaty/" class="b-trends__item">Салаты</a>
-                <a href="https://www.foodclub.ru/recipes/shtrudel/" class="b-trends__item">Штрудель</a>
-                <a href="https://www.foodclub.ru/search/Яблочные%20пироги/" class="b-trends__item">Яблочные пироги</a>
+                <div class="trends-item">
+                    <a href="https://www.foodclub.ru/search/к%20чаю/" class="b-trends__item">К чаю</a>
+                    <a href="https://www.foodclub.ru/search/Овощные%20пироги/" class="b-trends__item">Овощные пироги</a>
+                    <a href="https://www.foodclub.ru/search/салат%20оливье/" class="b-trends__item">Оливье</a>
+                    <a href="https://www.foodclub.ru/search/Постные%20рецепты/" class="b-trends__item active">Постные
+                        рецепты</a>
+                    <a href="https://www.foodclub.ru/recipes/salaty/" class="b-trends__item">Салаты</a>
+                    <a href="https://www.foodclub.ru/recipes/shtrudel/" class="b-trends__item">Штрудель</a>
+                    <a href="https://www.foodclub.ru/search/Яблочные%20пироги/" class="b-trends__item">Яблочные
+                        пироги</a>
+                </div>
+                <div class="trends-button-next">
+                    <img src="img/arrow-right.svg" alt="next">
+                </div>
+                <div class="trends-button-prev">
+                    <img src="img/arrow-left.svg" alt="prev">
+                </div>
             </div>
         </section>
 
@@ -52,16 +71,24 @@
             <h2>Видео рецепты на YouTube</h2>
             <div class="youtube-video-wrapper">
                 <div>
-                    <a href="https://youtu.be/pvp_L_gaGwc" target="_blank" style="background-image: url('/upload/rk/c43/c43f4f31f7f21d31906cd27704f22305.jpg');" class="b-yt-links__item"></a>
+                    <a href="https://youtu.be/pvp_L_gaGwc" target="_blank"
+                        style="background-image: url('/upload/rk/c43/c43f4f31f7f21d31906cd27704f22305.jpg');"
+                        class="b-yt-links__item"></a>
                 </div>
                 <div>
-                    <a href="https://youtu.be/VZg0xg_kClQ" target="_blank" style="background-image: url('/upload/rk/671/671d8fbc2c94c0fe6d0d7b957efcbeb1.jpg');" class="b-yt-links__item"></a>
+                    <a href="https://youtu.be/VZg0xg_kClQ" target="_blank"
+                        style="background-image: url('/upload/rk/671/671d8fbc2c94c0fe6d0d7b957efcbeb1.jpg');"
+                        class="b-yt-links__item"></a>
                 </div>
                 <div>
-                    <a href="https://youtu.be/qJ1eiI675mQ" target="_blank" style="background-image: url('/upload/rk/4e2/4e2da44e63c7444dd15c41a18d0db34e.jpg');" class="b-yt-links__item"></a>
+                    <a href="https://youtu.be/qJ1eiI675mQ" target="_blank"
+                        style="background-image: url('/upload/rk/4e2/4e2da44e63c7444dd15c41a18d0db34e.jpg');"
+                        class="b-yt-links__item"></a>
                 </div>
                 <div>
-                    <a href="https://youtu.be/4JbAGkUd7KA" target="_blank" style="background-image: url('/upload/rk/b0c/b0c7a248847bf8684f3850d5375cbb1f.jpg');" class="b-yt-links__item"></a>
+                    <a href="https://youtu.be/4JbAGkUd7KA" target="_blank"
+                        style="background-image: url('/upload/rk/b0c/b0c7a248847bf8684f3850d5375cbb1f.jpg');"
+                        class="b-yt-links__item"></a>
                 </div>
             </div>
         </section>
@@ -89,16 +116,16 @@
                 </div>
             </div>
         </section>
-
-        <footer>
-            <p>&copy; 2024 Foodclub. Все права защищены.</p>
-            <nav>
-                <ul>
-                    <li><a href="/contact">Контакты</a></li>
-                    <li><a href="/privacy">Политика конфиденциальности</a></li>
-                </ul>
-            </nav>
-        </footer>
     </div>
+    <footer>
+        <p>&copy; 2024 Foodclub. Все права защищены.</p>
+        <nav>
+            <ul>
+                <li><a href="/contact">Контакты</a></li>
+                <li><a href="/privacy">Политика конфиденциальности</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
