Main main page is done.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main_page.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Foodclub</title>
 </head>
 
@@ -25,15 +26,20 @@
                     <div class="right-section">
                         <div class="social-links">
                             <a href="https://www.youtube.com/@foodclub9375" target="_blank" title="YouTube">
-                                <img src="img/youtube.svg" alt="YouTube" class="b-header-panel__icon i-youtube hidden-xs hidden-sm">
+                                <img src="img/youtube.svg" alt="YouTube"
+                                    class="b-header-panel__icon i-youtube hidden-xs hidden-sm">
                             </a>
-                            <a href="https://www.instagram.com/foodclub_ru?igsh=MTQxM3Q4dzljdWFqag==" target="_blank" title="Instagram">
-                                <img src="img/instagram.svg" alt="Instagram" class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
+                            <a href="https://www.instagram.com/foodclub_ru?igsh=MTQxM3Q4dzljdWFqag==" target="_blank"
+                                title="Instagram">
+                                <img src="img/instagram.svg" alt="Instagram"
+                                    class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
                             </a>
                             <a href="https://www.foodclub.ru/search-m/" target="_blank" title="search">
-                                <img src="img/search.svg" alt="Search" class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
+                                <img src="img/search.svg" alt="Search"
+                                    class="b-header-panel__icon i-instagram hidden-xs hidden-sm">
                             </a>
-                            <a href="#" data-toggle="modal" data-target="#authModal" class="btn b-header-panel__login hidden-xs hidden-sm">Войти</a>
+                            <a href="#" data-toggle="modal" data-target="#authModal"
+                                class="btn b-header-panel__login hidden-xs hidden-sm">Войти</a>
                         </div>
                     </div>
                 </nav>
@@ -43,13 +49,14 @@
 
     <div class="main-container">
         <hr>
-        <h1 class="main-h1">Foodclub.ru — кулинарное сообщество</h1>
+        <h1 class="i-ph-animated">Foodclub.ru — кулинарное сообщество</h1>
         <hr>
 
         <div id="title-search_2" class="hidden-xs">
             <div title="Очистить поле" id="title-search_2__clear"></div>
             <form action="">
-                <input id="title-search-input_2" type="text" name="q" value="" size="40" maxlength="50" autocomplete="off" placeholder="Введите название рецепта, ингредиента, тип блюда">
+                <input id="title-search-input_2" type="text" name="q" value="" size="40" maxlength="50"
+                    autocomplete="off" placeholder="Введите название рецепта, ингредиента, тип блюда">
             </form>
         </div>
         <hr class="i-size-L">
@@ -72,14 +79,18 @@
                 <div class="trends-button-prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="6.243" height="10.485" viewBox="0 0 6.243 10.485">
                         <g transform="translate(-5.243 5.243) rotate(-45)">
-                            <path d="M5.949,5.95,1.706,10.192A1,1,0,0,1,.292,8.778L3.828,5.243.292,1.707A1,1,0,1,1,1.706.293L5.949,4.535A1,1,0,0,1,5.949,5.95Z" transform="translate(4.414 11.828) rotate(-135)" class="b-trends-button-path"></path>
+                            <path
+                                d="M5.949,5.95,1.706,10.192A1,1,0,0,1,.292,8.778L3.828,5.243.292,1.707A1,1,0,1,1,1.706.293L5.949,4.535A1,1,0,0,1,5.949,5.95Z"
+                                transform="translate(4.414 11.828) rotate(-135)" class="b-trends-button-path"></path>
                         </g>
                     </svg>
                 </div>
                 <div class="trends-button-next">
                     <svg xmlns="http://www.w3.org/2000/svg" width="6.243" height="10.485" viewBox="0 0 6.243 10.485">
                         <g transform="translate(-35.769 195.453) rotate(-135)">
-                            <path d="M22.033,19.715,17.79,15.473a1,1,0,0,0-1.414,1.414l3.536,3.535-3.536,3.536a1,1,0,1,0,1.414,1.414l4.243-4.242A1,1,0,0,0,22.033,19.715Z" transform="translate(135.02 162.86) rotate(135)" class="b-trends-button-path"></path>
+                            <path
+                                d="M22.033,19.715,17.79,15.473a1,1,0,0,0-1.414,1.414l3.536,3.535-3.536,3.536a1,1,0,1,0,1.414,1.414l4.243-4.242A1,1,0,0,0,22.033,19.715Z"
+                                transform="translate(135.02 162.86) rotate(135)" class="b-trends-button-path"></path>
                         </g>
                     </svg>
                 </div>
@@ -89,41 +100,68 @@
 
         <section class="youtube-video">
             <h2>Видео рецепты на YouTube</h2>
-            <div class="youtube-video-wrapper">
-                <div>
-                    <a href="https://youtu.be/pvp_L_gaGwc" target="_blank"
-                        style="background-image: url('/upload/rk/c43/c43f4f31f7f21d31906cd27704f22305.jpg');"
-                        class="b-yt-links__item"></a>
-                </div>
-                <div>
-                    <a href="https://youtu.be/VZg0xg_kClQ" target="_blank"
-                        style="background-image: url('/upload/rk/671/671d8fbc2c94c0fe6d0d7b957efcbeb1.jpg');"
-                        class="b-yt-links__item"></a>
-                </div>
-                <div>
-                    <a href="https://youtu.be/qJ1eiI675mQ" target="_blank"
-                        style="background-image: url('/upload/rk/4e2/4e2da44e63c7444dd15c41a18d0db34e.jpg');"
-                        class="b-yt-links__item"></a>
-                </div>
-                <div>
-                    <a href="https://youtu.be/4JbAGkUd7KA" target="_blank"
-                        style="background-image: url('/upload/rk/b0c/b0c7a248847bf8684f3850d5375cbb1f.jpg');"
-                        class="b-yt-links__item"></a>
+            <hr class="i-size-M">
+            <div class="b-yt-links__scroll">
+                <div class="b-yt-links__list">
+                    <a href="https://www.youtube.com/watch?v=pvp_L_gaGwc&t=1s" target="_blank"
+                        style="background-image: url('img/sirniki.jpg');" class="b-yt-links__item">
+                        <span class="b-yt-links__decor"></span>
+                        <span class="b-yt-links__text">Классические сырники из творога</span>
+                        <span style="background-image: url('img/yt-icon.svg');" class="b-yt-links__yt-icon"></span>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=VZgOxg_kCIQ" target="_blank"
+                        style="background-image: url('img/lazanya.jpg');" class="b-yt-links__item">
+                        <span class="b-yt-links__decor"></span>
+                        <span class="b-yt-links__text">Лазанья с фаршем</span>
+                        <span style="background-image: url('img/yt-icon.svg');" class="b-yt-links__yt-icon"></span>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=qJ1eiI675mQ" target="_blank"
+                        style="background-image: url('img/ruletiki.jpg');" class="b-yt-links__item">
+                        <span class="b-yt-links__decor"></span>
+                        <span class="b-yt-links__text">Творожные рулетики из лаваша</span>
+                        <span style="background-image: url('img/yt-icon.svg');" class="b-yt-links__yt-icon"></span>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=4JbAGkUd7KA" target="_blank"
+                        style="background-image: url('img/shtrudel.jpg');" class="b-yt-links__item">
+                        <span class="b-yt-links__decor"></span>
+                        <span class="b-yt-links__text">Яблочный штрудель</span>
+                        <span style="background-image: url('img/yt-icon.svg');" class="b-yt-links__yt-icon"></span>
+                    </a>
                 </div>
             </div>
         </section>
 
         <section class="recommendations">
-            <h2>Foodclub.ru рекомендует</h2>
-            <div class="recommendations-wrapper">
-                <div>
-                    <a href="" class="b-recommendations__item">3 идеи на неделю</a>
+            <div class="b-heading-linethrough">
+                <h2 class="i-ph-animated">Foodclub.ru рекомендует</h2>
+            </div>
+            <hr class="i-size-L">
+            <div class="recommendations-grid">
+                <div class="recommendation-card">
+                    <a href="" class="recommendation-image">
+                        <img src="img/3_ideas.jpeg" alt="3 идеи на неделю">
+                    </a>
+                    <div class="recommendation-title">
+                        <a href="">3 идеи на неделю</a>
+                    </div>
                 </div>
-                <div>
-                    <a href="" class="b-recommendations__item">Классические салаты</a>
+
+                <div class="recommendation-card">
+                    <a href="https://www.foodclub.ru/search/классические%20салаты/" class="recommendation-image">
+                        <img src="img/salads.jpg" alt="Классические салаты">
+                    </a>
+                    <div class="recommendation-title">
+                        <a href="">Классические салаты</a>
+                    </div>
                 </div>
-                <div>
-                    <a href="" class="b-recommendations__item">Рецепты из бакзажанов</a>
+
+                <div class="recommendation-card">
+                    <a href="/ingredient/baklazhany/" class="recommendation-image">
+                        <img src="img/baklazhany.jpg" alt="Рецепты из баклажанов">
+                    </a>
+                    <div class="recommendation-title">
+                        <a href="/ingredient/baklazhany/">Рецепты из баклажанов</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -132,19 +170,36 @@
             <h2>Отзывы к рецептам</h2>
             <div class="recipes-reviews-wrapper">
                 <div>
-                    <!-- отзывы -->
+                    <div class="b-last-comments__wrapper">
+                        <div class="b-last-comments__item" id="bx_3218110189_84586">
+                            <div style="background-image: url( '/web/20220323144034/https://www.foodclub.ru/images/avatar/avatar.jpg' );"
+                                class="b-last-comments__userpic"></div>
+                            <div class="b-last-comments__content">
+                                <div class="b-last-comments__author">Fasochka</div>
+                                <div class="b-last-comments__text">
+                                    Мария, Вы передержали карамель. Густота и вязкость образуется при жжении сахара. Чем
+                                    дольше Вы его жжете, тем карамель станет гуще, темнее и впоследствии горше. </div>
+                                <div class="b-last-comments__info"><a
+                                        href="/web/20220323144034mp_/https://www.foodclub.ru/recipes/solenaya-karamel/">Солёная
+                                        карамель</a></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
+    <hr class="i-size-L">
     <footer>
-        <p>&copy; 2024 Foodclub. Все права защищены.</p>
-        <nav>
-            <ul>
-                <li><a href="/contact">Контакты</a></li>
-                <li><a href="/privacy">Политика конфиденциальности</a></li>
-            </ul>
-        </nav>
+        <div class="footer-container">
+            <p>&copy; 2024 Foodclub. Все права защищены.</p>
+            <nav>
+                <ul>
+                    <li><a href="/contact">Контакты</a></li>
+                    <li><a href="/privacy">Политика конфиденциальности</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 
